[tool.poetry]
name = "classificatorenps"
version = "0.1.0"
description = ""
authors = ["SimDimario <simonedimario84@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"

numpy = "1.26.4"
scikit-learn = "1.6.1"

joblib = "*"
tensorflow = "*"
fastapi = "*"
uvicorn = "*"
imbalanced-learn = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
