[project]
name = "pentionsystem"
version = "0.1.0"
description = ""
authors = [
    {name = "SimDimario",email = "simonedimario84@gmail.com"}
]
requires-python = ">=3.10"

package-mode = false

dependencies = [
    "numpy",
    "folium",
    "streamlit",
    "matplotlib",
    "streamlit-folium",
    "windrose",
    "scipy"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
