[project]
name = "gaussianpuff"
version = "0.1.0"
description = ""
authors = [
    {name = "SimDimario",email = "simonedimario84@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
"matplotlib",
"windrose",
"folium",
"branca",
"fastapi",
"uvicorn"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
